--- a/index.html
+++ b/index.html
@@ -5,8 +5,89 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CV - Yakov Kungurtsev</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header>
+	<div class="head-info">
+		<img src="avatar.png" alt="Avatar image">
+		<h1>Yakov Kungurtsev</h1>
+		<h2>Junior Front-end developer</h2>
+	</div>
+	<div class="head-contact">
+		<ul>
+			<li>Discord: Fireonok#3868</li>
+			<li><a href="https://t.me/Fireonok" target="_blank">Telegram</a></li>
+			<li><a href="mailto:fireonok@gmail.com" target="_blank" rel="noopener noreferrer">Email</a></li>
+		</ul>
+	</div>
+	<nav>
+		<ul>
+			<li><a href="#about-me">About Me</a></li>
+			<li><a href="#education">Education</a></li>
+			<li><a href="#languages">Languages</a></li>
+			<li><a href="#skills">Skills</a></li>
+			<li><a href="#projects">Projects</a></li>
+			<li><a href="#code">Code examples</a></li>
+		</ul>
+	</nav>
+</header>
 
+
+<main>
+	<div id="about-me">
+		<h2>About Me</h2>
+		<p>I started to get interested in web development at school: started to learn how to create websites, studied html/css.</p>
+		<p>For my graduation project at <i>Izhevsk industrial and economic college</i> I did a website using <b>Angular</b>, <b>MySQL</b> and <b>REST API</b> (unfortunately I lost the final version of the source code so I didn't include it in <i>Code examples</i>).</p>
+		<p>My goal is to become a Frontend-developer or <i>maybe</i> a Full-stack developer.</p>
+	</div>
+	<div id="education">
+		<h2>Education</h2>
+		<ul>
+			<li>Izhevsk industrial and economic college <span>(2014-2018)</span></li>
+			<li>Udmurt State University <span>(2020-...)</span></li>
+		</ul>
+	</div>
+	<div id="languages">
+		<h2>Languages</h2>
+		<ul>
+			<li>English <span>B1</span></li>
+			<li>Russian <span>native</span></li>
+		</ul>
+	</div>
+	<div id="skills">
+		<h2>Skills</h2>
+		<ul>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>Javascript</li>
+			<li>Git</li>
+		</ul>
+	</div>
+	<div id="projects">
+		<h2>Projects</h2>
+		<ul>
+			<li><a href="https://github.com/FiReOnok/epam_frontlab_task" target="_blank">Epam frontlab task</a></li>
+		</ul>
+	</div>
+	<div id="code">
+		<h2>Code examples</h2>
+		<pre>
+			function multiply(a, b){
+				return a * b
+			  }
+			  multiply(2,2);
+		</pre>
+	</div>
+</main>
+
+
+<footer>
+	<a href="https://github.com/Fireonok" title="My GitHub" target="_blank">Github</a>
+	&copy; 2022
+	<a href="https://rs.school/js/" target="_blank">
+		<img src="https://rs.school/images/rs_school_js.svg" alt="The Rolling Scopes">
+	</a>
+</footer>
 </body>
 </html>
