fix: header layout change

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CV - Yakov Kungurtsev</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
+	<img src="avatar.png" alt="Avatar image">
 	<div class="head-info">
-		<img src="avatar.png" alt="Avatar image">
 		<h1>Yakov Kungurtsev</h1>
-		<h2>Junior Front-end developer</h2>
+		<h3>Junior Front-end developer</h3>
 	</div>
 	<div class="head-contact">
 		<ul>
@@ -73,10 +76,10 @@
 	<div id="code">
 		<h2>Code examples</h2>
 		<pre>
-			function multiply(a, b){
-				return a * b
-			  }
-			  multiply(2,2);
+	function multiply(a, b){
+		return a * b
+	}
+	multiply(2,2);
 		</pre>
 	</div>
 </main>
