feat: update contact info

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</div>
 	<div class="head-contact">
 		<ul>
-			<li>Discord: Fireonok#3868</li>
+			<li><a href="https://discordapp.com/users/145480431364603904" target="_blank" rel="noopener noreferrer">Discord</a></li>
 			<li><a href="https://t.me/Fireonok" target="_blank">Telegram</a></li>
 			<li><a href="mailto:fireonok@gmail.com" target="_blank" rel="noopener noreferrer">Email</a></li>
 		</ul>
