feat: update projects list

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<div id="about-me">
 		<h2>About Me</h2>
 		<p>I started to get interested in web development at school: started to learn how to create websites, studied html/css.</p>
-		<p>For my graduation project at <i>Izhevsk industrial and economic college</i> I did a website using <b>Angular</b>, <b>MySQL</b> and <b>REST API</b> (unfortunately I lost the final version of the source code so I didn't include it in <i>Code examples</i>).</p>
+		<p>For my graduation project at <i>Izhevsk industrial and economic college</i> I did a website using <b>Angular</b>, <b>MySQL</b> and <b>REST API</b> (linked in <a href="#projects"><i>projects list</i></a>).</p>
 		<p>My goal is to become a Frontend-developer or <i>maybe</i> a Full-stack developer.</p>
 	</div>
 	<div id="education">
@@ -71,6 +71,7 @@
 		<h2>Projects</h2>
 		<ul>
 			<li><a href="https://github.com/FiReOnok/epam_frontlab_task" target="_blank">Epam frontlab task</a></li>
+			<li><a href="https://github.com/FiReOnok/collectcard-app" target="_blank">Collectcard-App</a> + <a href="https://github.com/FiReOnok/collectcard-app-api" target="_blank" rel="noopener noreferrer">REST API</a></li>
 		</ul>
 	</div>
 	<div id="code">
